--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     <description>The hexapawn game.</description>
 
     <scm>
-        <connection>https://github.com/jeszy75/rolling-cubes-game.git</connection>
-        <developerConnection>https://github.com/jeszy75/rolling-cubes-game.git</developerConnection>
+        <connection>scm:git:https://github.com/krisztian2545/Hexapawn.git</connection>
+        <developerConnection>scm:git:https://github.com/krisztian2545/Hexapawn.git</developerConnection>
     </scm>
     <developers>
         <developer>
@@ -246,7 +246,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>3.0.0-M3</version>
+                <version>3.0.0-M4</version>
             </plugin>
         </plugins>
     </reporting>
